kubernetesFiles/svc_httpd.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd
  namespace: oscar
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: httpd
  type: NodePort
