kubernetesFiles/ing_httpd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd
  namespace: thomas
spec:
  ingressClassName: public
  rules:
  - host: httpd.k8s.it
    http:
      paths:
      - backend:
          service:
            name: httpd
            port:
              number: 80
        path: /
        pathType: Prefix
